--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <nav>
         <ul>
             <li><a href="#">Inicio</a></li>
+            <li><a href="#">Proyectos</a></li>
             <li><a href="#">Acerca de</a></li>
-            <li><a href="#">Servicios</a></li>
             <li><a href="#">Contacto</a></li>
         </ul>
     </nav>
