--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <nav>
         <ul>
             <li><a href="#">Inicio</a></li>
-            <li><a href="#">Proyectos</a></li>
+            <li><a href="proyectos.html">Proyectos</a></li>
             <li><a href="#">Acerca de</a></li>
             <li><a href="#">Contacto</a></li>
         </ul>
