--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script> -->
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/332f4a3508.js" crossorigin="anonymous"></script>
     <script defer src="script.js"></script>
 </head>
 
 <body>
-    <div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
+    <!-- <div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
         <img src="https://images.unsplash.com/photo-1480321182142-e77f14b9aa64?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="image" draggable="false">
         <img src="https://images.unsplash.com/photo-1480321182142-e77f14b9aa64?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="image" draggable="false">
         <img src="https://images.unsplash.com/photo-1480321182142-e77f14b9aa64?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="image" draggable="false">
@@ -25,7 +25,8 @@
         <img src="https://images.unsplash.com/photo-1480321182142-e77f14b9aa64?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="image" draggable="false">
         <img src="https://images.unsplash.com/photo-1480321182142-e77f14b9aa64?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="image" draggable="false">
         <img src="https://images.unsplash.com/photo-1480321182142-e77f14b9aa64?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="image" draggable="false">
-    </div>
+    </div> -->
+    <h1>Coming soon...</h1>
 </body>
 
 </html>
