--- a/index.html
+++ b/index.html
@@ -1,32 +1,50 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script> -->
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://kit.fontawesome.com/332f4a3508.js" crossorigin="anonymous"></script>
-    <script defer src="script.js"></script>
+    <title>Filip Rendón</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 
 <body>
-    <!-- <div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
-        <img src="https://images.unsplash.com/photo-1480321182142-e77f14b9aa64?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="image" draggable="false">
-        <img src="https://images.unsplash.com/photo-1480321182142-e77f14b9aa64?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="image" draggable="false">
-        <img src="https://images.unsplash.com/photo-1480321182142-e77f14b9aa64?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="image" draggable="false">
-        <img src="https://images.unsplash.com/photo-1480321182142-e77f14b9aa64?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="image" draggable="false">
-        <img src="https://images.unsplash.com/photo-1480321182142-e77f14b9aa64?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="image" draggable="false">
-        <img src="https://images.unsplash.com/photo-1480321182142-e77f14b9aa64?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="image" draggable="false">
-        <img src="https://images.unsplash.com/photo-1480321182142-e77f14b9aa64?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="image" draggable="false">
-        <img src="https://images.unsplash.com/photo-1480321182142-e77f14b9aa64?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="image" draggable="false">
-    </div> -->
-    <h1>Coming soon...</h1>
+    <div id="blob"></div>
+    <div id="blur"></div>
+    <div id="few"></div>
+
+    <div class="containerLoad load container-fluid">
+        <h1 class="typing-text"></h1>
+    </div>
+
+    <div class="container start container-fluid real">
+        <div class="about">
+            <h1 class="intro real" data-value="Hey, I'm Filip">Hey, I'm Filip</h1>
+            <p class="introText real">I'm currently working as a Junior Web Developer, focusing on the development of a
+                Chrome extension. I enjoy coding cool projects and websites that spark curiosity and creativity.</p>
+        </div>
+    </div>
+
+    <div class="container skills container-fluid real" style="min-width: 100vw;">
+        <div class="grid real">
+            <div class="gridItem gi1">Pokédex</div>
+            <div class="gridItem gi2">Spotify</div>
+            <div class="gridItem gi3">Pomodoro</div>
+            <div class="gridItem gi4">Kind Meals</div>
+            <div class="gridItem gi5">Mapa KindMeals</div>
+            <div class="gridItem gi6">Juego europa</div>
+            <div class="gridItem gi7">Collections</div>
+            <div class="gridItem gi8">Ahorcado</div>
+        </div>
+    </div>
+
 </body>
 
 </html>
