--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="container skills container-fluid real" style="min-width: 100vw;">
         <div class="grid real">
             <div class="gridItem gi1">Pokédex</div>
-            <div class="gridItem gi2">Spotify</div>
+            <div class="gridItem gi2" onclick="login()">Spotify</div>
             <div class="gridItem gi3">Pomodoro</div>
             <div class="gridItem gi4">Kind Meals</div>
             <div class="gridItem gi5">Mapa KindMeals</div>
