--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             <h1 class="intro real contactTitle">Get in touch</h1>
         </div>
     </div>
-    <div class="footer" style="display: none;">
+    <div class="footer real">
         <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#ff6f61" class="bi bi-github"
             viewBox="0 0 16 16">
             <path
