--- a/Spotify/spotifyData.html
+++ b/Spotify/spotifyData.html
@@ -14,6 +14,8 @@
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/color-thief/2.3.0/color-thief.umd.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9210553868914513"
+     crossorigin="anonymous"></script>
 </head>
 
 <body style="background-color: #121212;">
