--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="blob"></div>
-    <section class="removable-section"></section>
+    <!-- <section class="removable-section"></section> -->
     <div class="content">
         <section class="main-section">
             <div class="intro-container">
