--- a/index.html
+++ b/index.html
@@ -48,29 +48,29 @@
                         Projects
                     </h1>
                 </div>
-                <div class="carousel-item" data-name="Kind Meals" style="background-color: rgb(197, 78, 78);">
+                <div class="carousel-item" data-name="Kind Meals" style="background-color: transparent;">
                     <a href="kind-meals.html" class="animate-link"><img src="img/header-pic.png" alt=""></a>
                 </div>
-                <div class="carousel-item" data-name="Spotify Tracker" style="background-color: black;">
+                <div class="carousel-item" data-name="Spotify Tracker" style="background-color: transparent;">
                     <a href="spotify-tracker.html" class="animate-link"><img src="img/s.png" alt=""></a>
                 </div>
-                <div class="carousel-item" data-name="Kind Meals Map" style="background-color: rgb(102, 197, 78);">
+                <div class="carousel-item" data-name="Kind Meals Map" style="background-color: transparent;">
                     <a href="kind-meals-map.html" class="animate-link"><img src="img/mapa.png" alt=""></a>
                 </div>
-                <div class="carousel-item" data-name="Pomodoro" style="background-color: rgb(197, 78, 78);">
+                <div class="carousel-item" data-name="Pomodoro" style="background-color: transparent;">
                     <a href="pomodoro.html" class="animate-link"> <img src="img/pomodoro.jpg" alt=""></a>
                 </div>
-                <div class="carousel-item" data-name="Puzzle Game">
+                <div class="carousel-item" data-name="Puzzle Game" style="background-color: transparent;">
                     <a href="puzzle-game.html" class="animate-link"><img src="img/juegoEuropa.png"
                             alt="Puzzle game"></a>
                 </div>
-                <div class="carousel-item" data-name="Pokedex">
+                <div class="carousel-item" data-name="Pokedex" style="background-color: transparent;">
                     <a href="pokedex.html" class="animate-link"><img src="img/pokedex.png" alt="Pokedex"></a>
                 </div>
-                <div class="carousel-item" data-name="Collections">
+                <div class="carousel-item" data-name="Collections" style="background-color: transparent;">
                     <a href="collections.html" class="animate-link"><img src="img/collections.png" alt="Pokemon Collections"></a>
                 </div>
-                <div class="carousel-item" data-name="Hangman Game">
+                <div class="carousel-item" data-name="Hangman Game" style="background-color: transparent;">
                     <a href="hangman.html" class="animate-link"><img src="img/ahorcado.png" alt="Hangman Game"></a>
                 </div>
             </div>
